<resources>
    <string name="app_name">Central Chat</string>
    <string name="welcome">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="register_btn">Register</string>
    <string name="logo">logo</string>
    <string name="hint_password">password</string>
    <string name="phone_number">phone number</string>
    <string name="hint_email">email</string>
    <string name="hint_username">username</string>
    <string name="central_motto">Faith, Integrity and Excellence</string>
    <string name="index_num">CSC18010883</string>
    <string name="icon_home">Home</string>
    <string name="profile_icon">profile</string>
    <string name="settings_icon">settings</string>
    <string name="chats">Chats</string>
    <string name="users">Users</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="messages">Messages</string>
    <string name="place_holder_text">This is last message</string>
    <string name="unseen_placeholder">1</string>
    <string name="news_header">Campus News</string>
    <string name="news">News</string>
    <string name="news_img">news_image</string>
    <string name="news_content">News Content</string>
    <string name="news_date">date</string>
    <string name="search_icon">search_icon</string>
    <string name="user_status">Online</string>
    <string name="enter_message_here">Enter message here…</string>
    <string name="friend_placeholder">this is friends message</string>
    <string name="timeStamp_placeholder">10–06–2022 4:54pm</string>
    <string name="faith_integrity_and_n_excellence">Faith Integrity and \n Excellence</string>
    <string name="logo_description">Central logo</string>
    <string name="logout">Logout</string>
    <string name="edit">Edit</string>
    <string name="phone">Phone</string>
    <string name="your_username">Your username</string>
    <string name="user_content_description">user icon</string>
    <string name="update">Update</string>
    <string name="profile_pic">Profile Picture</string>
    <string name="image_file">image file</string>
    <string name="unseenmessages">%1$d</string>
    <string name="timeStamp">%1$s %2$s</string>
    <string name="choose_file">Choose File</string>
    <string name="back_button">back button</string>
    <string name="send_button">send button</string>
    <string name="my_message_placeholder">this is my message</string>
</resources>