<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:background="@color/blue_800"
        android:padding="12dp"
        android:text="@string/update"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/hint_username"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:textSize="25sp"
        android:hint="@string/hint_username"
        android:id="@+id/editUserName"
        android:autofillHints="username"
        android:inputType="text"
        android:padding="8sp"
        android:paddingHorizontal="8dp"
        android:layout_marginStart="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/hint_email"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:textSize="25sp"
        android:hint="@string/hint_email"
        android:id="@+id/editEmail"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="8dp"
        android:layout_marginStart="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/phone"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:textSize="25sp"
        android:hint="@string/phone_number"
        android:id="@+id/editPhoneNum"
        android:autofillHints="phone number"
        android:inputType="phone"
        android:paddingHorizontal="8dp"
        android:layout_marginStart="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/profile_pic"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:text="@string/choose_file"
        android:padding="5dp"
        android:background="@drawable/rounded_gradient"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:id="@+id/chooseFile"/>

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_gradient"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/update"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:id="@+id/updateBtn"/>

</LinearLayout>