<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_back_light">

    <LinearLayout
        android:id="@+id/contentHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/news_image"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/news_img"
            android:src="@drawable/news_header_gradient" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/news_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/news_content"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/news_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/news_date" />

        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="#797D7D7E"
        android:layout_below="@+id/contentHolder"
        />

</RelativeLayout>