<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_gradient"
    tools:context=".homefragments.ProfileFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_picture"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_12sdp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/man" />

    <LinearLayout
        android:layout_width="@dimen/_350sdp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_picture"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_40sdp"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp"
        android:id="@+id/userDetails">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/userIcon"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:contentDescription="@string/user_content_description"
                android:foregroundGravity="left"
                android:src="@drawable/ic_profile" />

            <TextView
                android:id="@+id/userDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_8ssp"
                android:layout_toEndOf="@+id/userIcon"
                android:text="@string/hint_username"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10ssp"
                android:layout_toEndOf="@+id/userDescription"
                android:text="@string/your_username"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18ssp">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/phone_icon"
                android:foregroundGravity="left"
                android:id="@+id/phoneIcon"
                android:contentDescription="@string/phone_number"/>

            <TextView
                android:id="@+id/phoneNumLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_8ssp"
                android:layout_toEndOf="@+id/phoneIcon"
                android:text="@string/phone"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/phoneNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10ssp"
                android:layout_toEndOf="@+id/phoneNumLabel"
                android:layout_centerVertical="true"
                android:text="@string/phone_number"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp">

            <ImageView
                android:layout_centerVertical="true"
                android:id="@+id/emailIcon"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:contentDescription="@string/hint_email"
                android:foregroundGravity="left"
                android:src="@drawable/email_icon" />

            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_8ssp"
                android:layout_toEndOf="@+id/emailIcon"
                android:text="@string/hint_email"
                android:textSize="@dimen/_13ssp" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10ssp"
                android:layout_toEndOf="@+id/emailLabel"
                android:layout_centerVertical="true"
                android:text="@string/hint_email"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="@dimen/_350sdp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userDetails"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp">

        <Button
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:background="@drawable/round_btn"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_20ssp"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp" />

        <Button
            android:id="@+id/edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_below="@+id/logout"
            android:background="@drawable/round_btn"
            android:text="@string/edit"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            android:layout_marginTop="@dimen/_20sdp"/>

    </RelativeLayout>


</RelativeLayout>