<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/root_layout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_picture"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="25dp"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/profile_icon"
                android:src="@drawable/user" />

            <LinearLayout
                android:layout_toStartOf="@+id/unseen_messages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="20dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/profile_picture">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_username"
                    android:maxLines="1"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:id="@+id/userName"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textSize="14sp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/light_black"
                    android:text="@string/place_holder_text"
                    android:id="@+id/last_message"/>

            </LinearLayout>

            <TextView
                android:id="@+id/unseen_messages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="33dp"
                android:background="@drawable/round_frame"
                android:gravity="center"
                android:text="@string/unseen_placeholder"
                android:textColor="@color/white"
                android:padding="8dp"
                android:textSize="12sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#14000000"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

    </LinearLayout>

</RelativeLayout>