<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:id="@+id/oppoLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="50dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/oppoMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/opo_msg_back"
                android:padding="@dimen/_20sdp"
                android:textSize="@dimen/_15ssp"
                android:text="@string/friend_placeholder"
                android:textColor="#424242" />

            <TextView
                android:id="@+id/oppoMsgTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/timeStamp_placeholder"
                android:textSize="@dimen/_10ssp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/myLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/myMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/my_msg_back"
                android:padding="@dimen/_20sdp"
                android:textSize="@dimen/_15ssp"
                android:text="@string/my_message_placeholder"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/myMsgTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="5dp"
                android:text="@string/timeStamp_placeholder"
                android:textSize="@dimen/_10ssp" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>