<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/root_layout"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_picture"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_centerVertical="true"
                android:layout_marginStart="25dp"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/profile_icon"
                android:src="@drawable/user" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="20dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/profile_picture">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_username"
                    android:maxLines="1"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold"
                    android:id="@+id/userName"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textStyle="bold"
                    android:textSize="@dimen/_12ssp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/light_black"
                    android:text="@string/index_num"
                    android:id="@+id/index_num"/>

            </LinearLayout>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#14000000"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

    </LinearLayout>

</RelativeLayout>